--- a/vercel.json
+++ b/vercel.json
@@ -2,15 +2,15 @@
     "version": 2,
     "builds": [
       {
-        "src": "dist/api/index.js",
-        "use": "@vercel/node"
-      },
-      {
-        "src": "vite.config.ts",
+        "src": "package.json",
         "use": "@vercel/static-build",
         "config": {
           "distDir": "dist/client"
         }
+      },
+      {
+        "src": "dist/api/index.js",
+        "use": "@vercel/node"
       }
     ],
     "routes": [
