--- a/package.json
+++ b/package.json
@@ -5,12 +5,11 @@
   "license": "MIT",
 "scripts": {
   "dev": "tsx server/index.ts",
-  "build": "vite build --outDir dist/client && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outfile dist/api/index.js",
+"build": "vite build --outDir dist/client && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist/api",
   "start": "NODE_ENV=production node dist/api/index.js",
   "check": "tsc",
   "db:push": "drizzle-kit push"
-}
-,
+},
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.7.2",
     "@hookform/resolvers": "^3.9.1",
