--- a/vercel.json
+++ b/vercel.json
@@ -1,26 +1,14 @@
 {
     "version": 2,
-    "builds": [
-      {
-        "src": "package.json",
-        "use": "@vercel/static-build",
-        "config": {
-          "distDir": "dist/client"
-        }
-      },
-      {
-        "src": "dist/api/index.js",
-        "use": "@vercel/node"
-      }
-    ],
+    "outputDirectory": "dist/client",
     "routes": [
       {
         "src": "/api/(.*)",
-        "dest": "/dist/api/index.js"
+        "dest": "dist/api/index.js"
       },
       {
         "src": "/(.*)",
-        "dest": "/dist/client/$1"
+        "dest": "/index.html"
       }
     ]
   }
