--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "version": "1.0.0",
   "type": "module",
   "license": "MIT",
-"scripts": {
-  "dev": "tsx server/index.ts",
-"build": "vite build --outDir dist/client && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist/api",
-  "start": "NODE_ENV=production node dist/api/index.js",
-  "check": "tsc",
-  "db:push": "drizzle-kit push"
-},
+  "scripts": {
+    "dev": "tsx server/index.ts",
+    "build": "npm run clean && vite build --outDir dist/client && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist/api",
+    "start": "NODE_ENV=production node dist/api/index.js",
+    "check": "tsc",
+    "db:push": "drizzle-kit push",
+    "clean": "del /f /s /q dist"
+  },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.7.2",
     "@hookform/resolvers": "^3.9.1",
