--- a/vercel.json
+++ b/vercel.json
@@ -2,11 +2,8 @@
     "version": 2,
     "builds": [
       {
-        "src": "package.json",
-        "use": "@vercel/static-build",
-        "config": {
-          "distDir": "dist/client"
-        }
+        "src": "dist/client/**",
+        "use": "@vercel/static"
       },
       {
         "src": "dist/api/index.js",
