Ready for Vercel deployment 3

--- a/vercel.json
+++ b/vercel.json
@@ -2,8 +2,8 @@
     "version": 2,
     "builds": [
       {
-        "src": "dist/client/**",
-        "use": "@vercel/static"
+        "src": "package.json",
+        "use": "@vercel/static-build"
       },
       {
         "src": "dist/api/index.js",
@@ -17,7 +17,7 @@
       },
       {
         "src": "/(.*)",
-        "dest": "/index.html"
+        "dest": "/dist/client/index.html"
       }
     ]
   }
